2004-07-23  Matthias Wimmer  <m@tthias.net>

    * dialback/dialback.c: allow clustering of s2s components
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dnsrv/dnsrv.c: same
    * jabber.xml.dist.in: same

2004-07-15  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/base64.c: moved str_b64decode from str.c to base64.c
    * jabberd/lib/str.c: same
    * jabberd/lib/jid.c: free the caching strcuture on server shutdown
    * jabberd/lib/pool.c: do not try to allocate memory indefinitely
    * man/jabberd.8.in: documented exit states

2004-07-07  Matthias Wimmer  <m@tthias.net>

    * configure.in: check for openssl using pkg-config
    * jabber.xml.dist.in: Disable stone-age s2s connections by default
    * dialback/dialback.c: added documentation / removed comment related to
	old pthsock_server, that had already been removed from jabberd
    * jabberd/mio.c: added some debugging statements

2004-07-06  Matthias Wimmer  <m@tthias.net>

    * dnsrv/srv_resolv.c: Fix DNS resolving. Bug introduced on 2004-06-30.

2004-07-01  Matthias Wimmer  <m@tthias.net>

    * jabberd/log.c: Fix for broken log messages of type 'record'. Bug could
    	be used for DoS, but existed only in CVS since 2004-05-14.
    * jabberd/config.c: portable syslog facilities
    * jabberd/jabberd.h: same
    * jabberd/base/base_syslog.c: same
    * jabberd/jsm/mod_offline.c: added documentation
    * jabberd/jsm/mod_presence.c: same
    * jabberd/jsm/mod_register.c: same
    * jabberd/jsm/mod_stat.c: same
    * jabberd/jsm/mod_time.c: same

2004-06-30  Matthias Wimmer  <m@tthias.net>

    * dnsrv/srv_resolv.c: allow multiple results for a DNS query

2004-06-29  Matthias Wimmer  <m@tthias.net>

    * configure.in: flag modules as such
    * dialback/Makefile.am: same
    * dnsrv/Makefile.am: same
    * jabberd/Makefile.am: same
    * jabberd/base/Makefile.am: same
    * jabberd/lib/Makefile.am: same
    * jsm/Makefile.am: same
    * jsm/modules/Makefile.am: same