@@ -1,3 +1,8 @@
+2004-09-01  Matthias Wimmer  <m@tthias.net>
+
+    * util/pool.c: Remove pmalloc_x, we don't use it
+    * util/util.c: same
+
 2004-07-15  Matthias Wimmer  <m@tthias.net>
 
     * README.maintainer: Reminder not to generate broken distributions
